--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -176,7 +176,13 @@
                                     <!--<label for="contact_name">Name:</label>-->
                                     <div class="btn-group" role="group">
                                         <form ng-submit="search(criteria)">
-                                            <input ng-model="criteria" placeholder="Критеријум претраге" class="form-control" />
+                                            <input ng-model="criteria" placeholder="Критеријум претраге"
+                                                   class="form-control" list="usersSearch"/>
+                                            <datalist id="usersSearch">
+                                                <option ng-repeat="userName in userNames track by $index">
+                                                    {{userName.userName}}
+                                                </option>
+                                            </datalist>
                                         </form>
                                     </div>
                                     <div class="btn-group" role="group">
@@ -185,16 +191,24 @@
                                         </button>
                                     </div>
                                 </div>
-                                <div class="btn-group-justified">
+                                <div class="btn-group-justified" ng-repeat="searchedUser in searchedUsers track by $index">
                                     <div class="btn-group" role="group">
-                                        <button ng-click="follow(userName)" class="btn btn-primary">
-                                            Прати
-                                        </button>
+                                        <label class="form-control" role="group">
+                                            {{searchedUser.userName}}
+                                        </label>
                                     </div>
-                                    <div class="btn-group" role="group">
-                                        <button ng-click="block(userName)" class="btn btn-primary">
-                                            Блокирај
-                                        </button>
+
+                                    <div class="btn-group btn-group-vertical" role="group">
+                                        <div class="btn-group" role="group">
+                                            <button ng-click="follow(searchedUser.userName)" class="btn btn-primary">
+                                                Прати
+                                            </button>
+                                        </div>
+                                        <div class="btn-group" role="group">
+                                            <button ng-click="block(searchedUser.userName)" class="btn btn-primary">
+                                                Блокирај
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
