--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -244,7 +244,6 @@
                                 <h2>Претрага</h2>
 
                                 <div class="btn-group btn-group-justified">
-                                    <!--<label for="contact_name">Name:</label>-->
                                     <div class="btn-group" role="group">
                                         <form ng-submit="search(criteria)">
                                             <input ng-model="criteria" placeholder="Критеријум претраге"
@@ -267,6 +266,14 @@
                                         <label class="form-control" role="group">
                                             {{searchedUser.userName}}
                                         </label>
+                                        <h6>Име: {{searchedUser.firstName}}</h6>
+                                        <h6>Презиме: {{searchedUser.lastName}}</h6>
+                                        <h6>Датум рођења: {{searchedUser.birthDate}}</h6>
+                                        <h6>Датум приступа: {{searchedUser.joinedDate}}</h6>
+                                        <h6>Пол: {{searchedUser.sex}}</h6>
+                                        <h6>Место: {{searchedUser.location}}</h6>
+                                        <h6>{{searchedUser.profilePicture}}</h6>
+                                        <h6>Статус везе: {{searchedUser.relationshipStatus}}</h6>
                                     </div>
 
                                     <div class="btn-group btn-group-vertical" role="group">
