--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -118,8 +118,32 @@
 
                         <section id="match-text" class="inactive">
                             <h2 class="text-center">Споји!</h2>
-                            <div class="col-sm-12 col-md-12 col-lg-12">
-                                <h3>Jedan sektor</h3>
+                            <div class="col-sm-12 col-md-12 col-lg-12" ng-controller="MatchController">
+
+                                <div ng-repeat="user in responseObject track by $index">
+                                    <div class="btn-group" role="group">
+                                        <label class="form-control" role="group">
+                                            {{user.userName}}
+                                        </label>
+                                    </div>
+                                    <div class="btn-group" role="group">
+                                        <label class="form-control" role="group">
+                                            {{user.userScore}}
+                                        </label>
+                                    </div>
+                                    <div class="btn-group" role="group">
+                                        <div class="btn-group" role="group">
+                                            <button ng-click="followUser(user.userName)" class="btn btn-primary">
+                                                Прати
+                                            </button>
+                                        </div>
+                                        <div class="btn-group" role="group">
+                                            <button ng-click="blockUser(user.userName)" class="btn btn-primary">
+                                                Блокирај
+                                            </button>
+                                        </div>
+                                </div>
+                               <!-- <h3>Jedan sektor</h3>
                                 <p>Nullam vitae lectus dui. Donec vulputate ac tortor id convallis. Sed nisi mauris,
                                     laoreet vitae lacus at, viverra viverra neque. Curabitur nec aliquam lacus.</p>
                                 <h3>Drugi sektor</h3>
@@ -127,7 +151,7 @@
                                     condimentum nibh eleifend ut. Donec consequat arcu.</p>
                                 <h3>Treći sektor</h3>
                                 <p>In tellus ipsum, ullamcorper vitae justo sit amet, mattis consequat tortor.
-                                    Suspendisse risus urna, posuere id orci ut, facilisis accumsan ipsum.</p>
+                                    Suspendisse risus urna, posuere id orci ut, facilisis accumsan ipsum.</p> -->
                             </div>
                         </section><!-- /.match-text -->
 
@@ -239,7 +263,7 @@
                             </div>
                         </section><!-- /.settings-text -->
 
-                        <section id="suggestions-text" class="inactive">
+                        <section id="suggestions-text" >
                             <div class="col-sm-12 col-md-12" ng-controller="SearchController">
                                 <h2>Претрага</h2>
 
