--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -314,7 +314,7 @@
 
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 footer">
                     <p class="footer-text">
-                        <span>Сва права заштићена &copy; Спајалица &reg; ... xD </span>
+                        <span>Сва права заштићена &copy; Спајалица &reg;</span>
                     </p>
                 </div><!-- /.footer -->
             </div>
