Zamenjena redundantnost u implementaciji praćenja i blokiranja

--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -135,12 +135,12 @@
                                     </div>
                                     <div class="btn-group" role="group">
                                         <div class="btn-group" role="group">
-                                            <button ng-click="followUser(user.userName)" class="btn btn-primary">
+                                            <button ng-click="follow(user.userName)" class="btn btn-primary">
                                                 Прати
                                             </button>
                                         </div>
                                         <div class="btn-group" role="group">
-                                            <button ng-click="blockUser(user.userName)" class="btn btn-primary">
+                                            <button ng-click="block(user.userName)" class="btn btn-primary">
                                                 Блокирај
                                             </button>
                                         </div>
