Added new version of bootstrap and picture template, and started working on a date picker.

--- a/SpajalicaFrontEnd/pages/ProfilePage.html
+++ b/SpajalicaFrontEnd/pages/ProfilePage.html
@@ -1,7 +1,13 @@
 <div class="col-sm-12 col-md-12 col-lg-12">
-    <h2>Корисник: {{nickname}}</h2>
-
-    <div ng-repeat="info in responseObject track by $index">
-        <p> {{ info }} </p>
+    <div class="row">
+        <div class="col-xs-6" style="float: left">
+            <img id="profile-pic" src="images/profile_default.png">
+        </div>
+        <div class="col-xs-6" style="float: right">
+            <h2>Корисник: {{nickname}}</h2>
+            <p ng-repeat="info in responseObject track by $index">
+                {{ info }}
+            </p>
+        </div>
     </div>
 </div>
