--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -13,6 +13,11 @@
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style_main.css">
+        
+        <script src="js/jquery.min.js"></script>
+        <script src="js/jquery.backstretch.min.js"></script>
+        <script src="js/spajalica_script.js"></script>
+        <script src="js/bootstrap.min.js"></script>
 
         <script src="js/angular.js"></script>
         <script src="js/app.js"></script>
@@ -129,10 +134,5 @@
         <div id="preloader">
             <div id="status">&nbsp;</div>
         </div><!-- /#preloader -->
-
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery.backstretch.min.js"></script>
-        <script src="js/spajalica_script.js"></script>
-
     </body>
 </html>
