--- a/SpajalicaFrontEnd/pages/SettingsPage.html
+++ b/SpajalicaFrontEnd/pages/SettingsPage.html
@@ -1,4 +1,7 @@
 <div  class="col-sm-12 col-md-12">
+
+    <!--<input  placeholder="2012-10-01" type="date" class='form-control'/>-->
+
     <h2>Промените своје информације</h2>
     <div ng-repeat="info in responseObject track by $index" >
         <span>{{info.label}}</span>
