--- a/SpajalicaFrontEnd/pages/ProfilePage.html
+++ b/SpajalicaFrontEnd/pages/ProfilePage.html
@@ -1,9 +1,9 @@
 <div class="col-sm-12 col-md-12 col-lg-12">
     <div class="row">
-        <div class="col-xs-6" style="float: left">
+        <div class="col-xs-6">
             <img id="profile-pic" src="images/profile_default.png">
         </div>
-        <div class="col-xs-6" style="float: right">
+        <div class="col-xs-6">
             <h2>Корисник: {{nickname}}</h2>
             <p ng-repeat="info in responseObject track by $index">
                 {{ info }}
