--- a/SpajalicaFrontEnd/pages/SettingsPage.html
+++ b/SpajalicaFrontEnd/pages/SettingsPage.html
@@ -31,7 +31,7 @@
             </form>
         </div>
         <div class="btn-group" role="group">
-            <button ng-click="saveUserTag(tag)" class="btn btn-primary">Сачувај</button>
+            <button ng-click="saveUserTag(tag)" class="form-control btn btn-primary">Сачувај</button>
         </div>
     </div>
     <div ng-repeat="userTag in userTags track by $index">
