--- a/SpajalicaFrontEnd/Login.html
+++ b/SpajalicaFrontEnd/Login.html
@@ -7,6 +7,7 @@
     <script src="js/jquery.backstretch.min.js"></script>
     <script src="js/angular.js"></script>
     <script src="js/login_script.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style_login.css">
