Dodata mogucnost odpracanja i odblokiranja ljudi.

--- a/SpajalicaFrontEnd/pages/MatchPage.html
+++ b/SpajalicaFrontEnd/pages/MatchPage.html
@@ -16,12 +16,12 @@
         </div>
         <div class="col-xs-4 btn-group" role="group">
             <div class="btn-group" role="group">
-                <button ng-click="follow(user.userName)" class="btn btn-primary">
+                <button ng-click="follow(user.userName)" class="btn btn-success">
                     Прати
                 </button>
             </div>
             <div class="btn-group" role="group">
-                <button ng-click="block(user.userName)" class="btn btn-primary">
+                <button ng-click="block(user.userName)" class="btn btn-danger">
                     Блокирај
                 </button>
             </div>
